# VAETracer

./: LICENSE  MutTracer_requirements.txt  README.md  env_split.sh  preprocess10X  scMut_requirements.txt
MutTracer/: README.md  __init__.py  environment.yml  main.py  preprocess_zxt.py  pyproject.toml
MutTracer/core/: __init__.py  data_utils.py  models.py  preprocess_zxt.py  reconstruction.py  training.py  visualization.py
MutTracer/utils/: visualization.py
data_process/: README.md  RunGATK.sh  SRAtoFastq.sh
demo/MutTracer/: demo.sh
demo/MutTracer/input_test/: exp.h5ad  exp_scvi_model.pkl  z_mt_test.pt  z_xt_test.pt  zmt_model_test.pkl
demo/MutTracer/input_test/linear_scvi/: adata.h5ad  model.pt
demo/scMut/: demo.sh  lineage_model.pkl  lineage_model_result.h5ad  simple_model.pkl  simple_model_result.h5ad  speed.md
demo/scMut/nmf+vae+ft_20260211_163733/: result.pkl
preprocess/: GetAF.py  README.md  RunCellranger.sh  RunGATK.sh  RunSTAR.sh
scMut/: README.md  __init__.py  baseVAE.py  data.py  export.py  log.py  pyproject.toml  scMut.py  scVI.py  sc_utils.py  test.py  utils.py  zinb_dist.py
scMut/core/: __init__.py  baseVAE.py  export.py  scMut.py  scVI.py  test.py  typing.py
tree/: __init__.py  cas_tree.py
tree_util/: __init__.py  cas_tree.py  newick.py
